[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/image/bumper.png" type="Texture" id=1]
[ext_resource path="res://scripts/bumper.gd" type="Script" id=2]
[ext_resource path="res://assets/Font/flappyfont.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="Bumper" type="KinematicBody2D"]
scale = Vector2( 4, 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.179061, -0.0566514 )
scale = Vector2( 0.964215, 0.817332 )
polygon = PoolVector2Array( -36.9556, 9.85068, 36.986, 9.85068, 36.9073, -3.58848, 32.655, -7.89321, -32.9396, -7.89321, -37.1131, -3.79847 )

[node name="Label" type="Label" parent="."]
margin_left = -4.0
margin_top = -6.0
margin_right = 4.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpUp" type="Timer" parent="Label"]
wait_time = 0.03

[node name="spawnbutton" type="Timer" parent="."]

[node name="shootdelay" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2147483652

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -36.9556, 9.85068, 37.5146, 9.76657, 37.2787, -4.15558, 32.2053, -8.87495, -33.1882, -8.2457, -37.1131, -3.79847 )
[connection signal="timeout" from="Label/HpUp" to="." method="_on_HpUp_timeout"]
[connection signal="timeout" from="spawnbutton" to="." method="_on_spawnbutton_timeout"]
[connection signal="timeout" from="shootdelay" to="." method="_on_shootdelay_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
